@@ -394,6 +394,20 @@
                   </packing>
                 </child>
                 <child>
+                  <object class="GtkCheckButton" id="checkbutton_use_smaller_icons">
+                    <property name="label" translatable="yes">Show task icons lesser than rest of panel icons</property>
+                    <property name="visible">True</property>
+                    <property name="can_focus">True</property>
+                    <property name="receives_default">False</property>
+                    <property name="draw_indicator">True</property>
+                  </object>
+                  <packing>
+                    <property name="expand">True</property>
+                    <property name="fill">True</property>
+                    <property name="position">8</property>
+                  </packing>
+                </child>
+                <child>
                   <object class="GtkHBox" id="hbox2">
                     <property name="visible">True</property>
                     <property name="can_focus">False</property>
