@@ -56,6 +56,10 @@
     so some icons might be invisible or placed under other plugins.
 * Removed call to gtk_widget_set_style() from volume slider to fix colors
     of current theme.
+* Changed icon size handling on task bar - it may now maintain the same
+    size as rest of icons. It may affect users who are used to have them
+    smaller, it's why this feature was made configurable, corresponding
+    config variable is UseSmallerIcons and default is 1 (old behavior).
 
 0.8.2
 -------------------------------------------------------------------------
